Recy: fix several text overlays on mobile issues

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -93,6 +93,7 @@
 }
 .panel-text {
   z-index: 3;
+  hyphens: manual;
 }
 .panel-video {
   display: table;
